fix(09): revise plans based on checker feedback
09-02: Add VolumeContext flow verification to Task 3
- Added key_link documenting CreateVolume -> ControllerPublishVolume flow
- Enhanced Task 3 verify section to confirm migrationTimeoutSeconds flows through
- Added success criteria for VolumeContext flow verification

09-03: Clarify GetDevicePath contract for disconnected devices
- Updated Task 2 to explicitly handle GetDevicePath error (device not connected)
- Added Task 3 to document GetDevicePath contract (returns error, not empty string)
- Updated key_links to document GetDevicePath behavior
- Added success criteria for error handling in NodeUnstageVolume

--- a/.planning/phases/09-migration-safety/09-02-PLAN.md
+++ b/.planning/phases/09-migration-safety/09-02-PLAN.md
@@ -27,6 +27,10 @@ must_haves:
       to: "pkg/driver/params.go"
       via: "ParseMigrationTimeout call"
       pattern: "ParseMigrationTimeout"
+    - from: "CreateVolume VolumeContext"
+      to: "ControllerPublishVolume req.GetVolumeContext()"
+      via: "CSI VolumeContext parameter flow"
+      pattern: "migrationTimeoutSeconds"
 ---
 
 <objective>
@@ -187,8 +191,13 @@ In CreateVolume, after parsing NVMe connection parameters:
 Also update the existing volume response (idempotent case) to include migrationTimeoutSeconds.
 
 This ensures the timeout configured in StorageClass is preserved and available during ControllerPublishVolume even though the original parameters are not directly available there.
+
+**VolumeContext flow verification:** The CSI spec guarantees VolumeContext from CreateVolumeResponse is stored in the PV and passed to ControllerPublishVolume via req.GetVolumeContext(). This is how existing parameters like "nvmeAddress", "nqn", etc. already flow through. Task 1 accesses this via `ParseMigrationTimeout(req.GetVolumeContext())`.
   </action>
-  <verify>grep -n "migrationTimeoutSeconds" pkg/driver/controller.go shows it in CreateVolume response</verify>
+  <verify>
+1. grep -n "migrationTimeoutSeconds" pkg/driver/controller.go shows it in CreateVolume response
+2. grep -A3 "VolumeContext" pkg/driver/controller.go shows BOTH CreateVolume setting migrationTimeoutSeconds AND existing ControllerPublishVolume accessing req.GetVolumeContext() (confirms the parameter actually flows through)
+  </verify>
   <done>CreateVolume includes migrationTimeoutSeconds in VolumeContext for ControllerPublishVolume to use</done>
 </task>
 
@@ -200,6 +209,7 @@ This ensures the timeout configured in StorageClass is preserved and available d
 3. Verify migration timeout check: grep "IsMigrationTimedOut" pkg/driver/controller.go
 4. Verify migrationTimeoutSeconds in VolumeContext: grep "migrationTimeoutSeconds" pkg/driver/controller.go
 5. Verify SAFETY-02 comment: grep "SAFETY-02" pkg/driver/controller.go
+6. Verify VolumeContext flow: grep -A3 "VolumeContext" pkg/driver/controller.go shows both CreateVolume setting it and ControllerPublishVolume reading it
 </verification>
 
 <success_criteria>
@@ -207,6 +217,7 @@ This ensures the timeout configured in StorageClass is preserved and available d
 - Timed-out migrations rejected with clear error message including elapsed time and max timeout
 - RWO path has clarifying comment explaining grace period vs concurrent attachment distinction
 - CreateVolume includes migrationTimeoutSeconds in VolumeContext
+- VolumeContext flow verified (CreateVolume sets, ControllerPublishVolume reads)
 - All existing tests pass
 </success_criteria>
 
