--- a/.planning/phases/09-migration-safety/09-03-PLAN.md
+++ b/.planning/phases/09-migration-safety/09-03-PLAN.md
@@ -27,6 +27,10 @@ must_haves:
       to: "pkg/nvme/device.go"
       via: "CheckDeviceInUse call in NodeUnstageVolume"
       pattern: "CheckDeviceInUse"
+    - from: "pkg/driver/node.go"
+      to: "pkg/nvme/nvme.go"
+      via: "GetDevicePath lookup (returns error if not connected)"
+      pattern: "GetDevicePath"
 ---
 
 <objective>
@@ -185,8 +189,18 @@ Between the unmount step and the NVMe disconnect step, add device-in-use verific
     // This prevents data corruption if processes still have the device open
     // (e.g., during forced pod termination or node failure scenarios)
     if nqn != "" {
+        // GetDevicePath returns error (not empty string) if device not connected
+        // This is expected during recovery scenarios where device was already disconnected
         devicePath, devErr := ns.nvmeConn.GetDevicePath(nqn)
-        if devErr == nil && devicePath != "" {
+        if devErr != nil {
+            // Device not found/not connected - skip device-in-use check
+            // This can happen if:
+            // 1. Device was already disconnected (idempotent unstage)
+            // 2. Connection was lost (device unreachable)
+            // In both cases, proceed with disconnect attempt (which will be a no-op or cleanup)
+            klog.V(3).Infof("Could not get device path for NQN %s: %v (device may already be disconnected, proceeding)", nqn, devErr)
+        } else {
+            // Device path found - check if it's in use before disconnecting
             result := nvme.CheckDeviceInUse(ctx, devicePath)
 
             if result.TimedOut {
@@ -212,9 +226,6 @@ Between the unmount step and the NVMe disconnect step, add device-in-use verific
                     devicePath, result.Error)
             }
             // If InUse=false and no error, proceed normally
-        } else if devErr != nil {
-            // Can't get device path - device may already be disconnected
-            klog.V(3).Infof("Could not get device path for NQN %s: %v (may be disconnected)", nqn, devErr)
         }
     }
 
@@ -222,56 +233,49 @@ Between the unmount step and the NVMe disconnect step, add device-in-use verific
     // ... existing disconnect code
 ```
 
-The check should be:
-1. After unmount (filesystem no longer needs the device)
-2. Before NVMe disconnect (verifies no other processes holding device)
-3. Non-blocking on timeout (device unresponsive = proceed with disconnect)
-4. Blocking if device busy (return FAILED_PRECONDITION to let kubelet retry)
+**Critical contract:** `GetDevicePath(nqn)` returns:
+- `(devicePath, nil)` when device is connected and found
+- `("", error)` when device is NOT connected or not found
+
+This means Task 2 MUST check for error first, not empty devicePath. The code above handles this correctly by checking `devErr != nil` to determine if device lookup succeeded.
   </action>
   <verify>grep -n "CheckDeviceInUse" pkg/driver/node.go shows the check in NodeUnstageVolume</verify>
   <done>NodeUnstageVolume checks device-in-use before NVMe disconnect, blocks if busy, proceeds on timeout</done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Add GetDevicePath method to Connector interface if missing</name>
+  <name>Task 3: Document GetDevicePath contract for disconnected devices</name>
   <files>pkg/nvme/nvme.go</files>
   <action>
-Check if GetDevicePath method exists on the Connector interface. If not, add it.
+Add clarifying documentation to the GetDevicePath method to make the error-on-not-found contract explicit.
 
-The method should return the block device path for a given NQN:
+Find the existing GetDevicePath method and enhance its doc comment:
 
 ```go
 // GetDevicePath returns the block device path for a connected NVMe target.
-// Returns empty string and nil error if not connected.
-// Returns error if lookup fails.
-func (c *Connector) GetDevicePath(nqn string) (string, error) {
-    // Use resolver to find device by NQN
-    if c.resolver == nil {
-        return "", fmt.Errorf("no resolver configured")
-    }
-
-    devicePath, err := c.resolver.ResolveDeviceByNQN(nqn)
-    if err != nil {
-        return "", err
-    }
-
-    return devicePath, nil
+//
+// Contract:
+//   - Returns (devicePath, nil) when device is connected and found
+//   - Returns ("", error) when device is NOT connected or lookup fails
+//   - Never returns ("", nil) - empty path always comes with an error
+//
+// Callers should check error first, not empty string:
+//   devicePath, err := conn.GetDevicePath(nqn)
+//   if err != nil {
+//       // Device not connected or lookup failed
+//   }
+//
+// The error will be from DeviceResolver.ResolveDevicePath which returns
+// "device not found for NQN" when the NQN is not connected.
+func (c *connector) GetDevicePath(nqn string) (string, error) {
+    return c.resolver.ResolveDevicePath(nqn)
 }
 ```
 
-If the method already exists, verify it works as expected. The resolver (from Phase 1-4) should have ResolveDeviceByNQN capability.
-
-Also ensure the Connector interface (if there is one) includes this method:
-
-```go
-type Connector interface {
-    // ... existing methods
-    GetDevicePath(nqn string) (string, error)
-}
-```
+This documentation clarifies the contract that Task 2 relies on: GetDevicePath returns error (not empty string) when the device is not connected. This is important because callers (like NodeUnstageVolume) need to distinguish between "device not connected" (normal during recovery) vs "device connected but check failed" (requires different handling).
   </action>
-  <verify>grep -n "GetDevicePath" pkg/nvme/nvme.go shows the method exists</verify>
-  <done>GetDevicePath method available on Connector to look up device path by NQN</done>
+  <verify>grep -A15 "GetDevicePath returns" pkg/nvme/nvme.go shows the documented contract including "Returns.*error.*when device is NOT connected"</verify>
+  <done>GetDevicePath contract documented: returns error (not empty string) when device not connected</done>
 </task>
 
 </tasks>
@@ -281,7 +285,8 @@ type Connector interface {
 2. `make test` - existing tests pass
 3. Verify device check function: grep "CheckDeviceInUse" pkg/nvme/device.go
 4. Verify NodeUnstageVolume integration: grep "CheckDeviceInUse" pkg/driver/node.go
-5. Test lsof behavior manually: `lsof /dev/nvme0n1` (should exit 1 if not in use)
+5. Verify GetDevicePath contract: grep -A10 "GetDevicePath returns" pkg/nvme/nvme.go shows error contract
+6. Test lsof behavior manually: `lsof /dev/nvme0n1` (should exit 1 if not in use)
 </verification>
 
 <success_criteria>
@@ -289,8 +294,10 @@ type Connector interface {
 - Uses lsof with 5s timeout via exec.CommandContext
 - Returns structured DeviceUsageResult with InUse, Processes, TimedOut, Error
 - NodeUnstageVolume calls CheckDeviceInUse after unmount, before disconnect
+- NodeUnstageVolume handles GetDevicePath error correctly (skips check if device not connected)
 - Returns FAILED_PRECONDITION if device busy (with process list in error)
 - Proceeds with disconnect if check times out (logs warning)
+- GetDevicePath contract documented explicitly
 - All existing tests pass
 </success_criteria>
 
