docs(10-05): add gap closure plan for MigrationCompleted event
Phase 10 verification found PostMigrationCompleted method exists but was
never called. This plan wires the event into ControllerUnpublishVolume
to complete the migration event lifecycle (Started, Completed, Failed).

Gap: Truth #5 "MigrationCompleted event posts to PVC when source node
detaches" was not satisfied - method defined but not called.

Fix: Query attachment state before RemoveNodeAttachment to detect
migration, capture context, then post event after successful partial
detach. Uses PV.spec.claimRef to resolve PVC namespace/name since
ControllerUnpublishVolumeRequest doesn't include VolumeContext.

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -2,7 +2,7 @@
 
 **Status:** In Progress
 **Phases:** 8-10
-**Total Plans:** 3 (Phase 8) + 4 (Phase 9) + TBD (Phase 10)
+**Total Plans:** 3 (Phase 8) + 4 (Phase 9) + 5 (Phase 10, including 1 gap closure)
 
 ## Overview
 
@@ -46,10 +46,10 @@ Plans:
 4. NodeUnstageVolume verifies no open file descriptors before issuing NVMe disconnect
 
 Plans:
-- [ ] 09-01-PLAN.md — Extend AttachmentState for migration tracking and configurable timeout
-- [ ] 09-02-PLAN.md — Separate migration timeout from RWO conflict detection logic
-- [ ] 09-03-PLAN.md — Device-in-use verification in NodeUnstageVolume
-- [ ] 09-04-PLAN.md — Comprehensive unit tests
+- [x] 09-01-PLAN.md — Extend AttachmentState for migration tracking and configurable timeout
+- [x] 09-02-PLAN.md — Separate migration timeout from RWO conflict detection logic
+- [x] 09-03-PLAN.md — Device-in-use verification in NodeUnstageVolume
+- [x] 09-04-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - Extend AttachmentState struct with MigrationStartedAt timestamp and MigrationTimeout duration
@@ -65,7 +65,7 @@ Plans:
 **Goal**: Operators can monitor migrations and users understand safe RWX usage
 **Depends on**: Phase 9
 **Requirements**: OBS-01, OBS-02, OBS-03
-**Plans**: TBD
+**Plans**: 5 plans in 2 waves (including 1 gap closure)
 
 **Success Criteria** (what must be TRUE):
 1. Prometheus metrics expose `migrations_total`, `migration_duration_seconds`, `active_migrations` gauge
@@ -73,9 +73,11 @@ Plans:
 3. User documentation clearly explains RWX is safe only for KubeVirt live migration (not general RWX workloads)
 
 Plans:
-- [ ] 10-01-PLAN.md — Prometheus migration metrics
-- [ ] 10-02-PLAN.md — Kubernetes migration events on PVC
-- [ ] 10-03-PLAN.md — User documentation for RWX safety
+- [x] 10-01-PLAN.md — Prometheus migration metrics (3 metrics, recording methods)
+- [x] 10-02-PLAN.md — Kubernetes migration events on PVC (3 event types)
+- [x] 10-03-PLAN.md — Wire metrics/events into attachment manager and controller
+- [x] 10-04-PLAN.md — User documentation for RWX safety (docs/kubevirt-migration.md)
+- [ ] 10-05-PLAN.md — Gap closure: Wire PostMigrationCompleted in ControllerUnpublishVolume
 
 **Details:**
 - Metrics with `rds_csi_migration_` prefix
