chore: update planning docs

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -77,7 +77,7 @@ Plans:
 - [x] 10-02-PLAN.md — Kubernetes migration events on PVC (3 event types)
 - [x] 10-03-PLAN.md — Wire metrics/events into attachment manager and controller
 - [x] 10-04-PLAN.md — User documentation for RWX safety (docs/kubevirt-migration.md)
-- [ ] 10-05-PLAN.md — Gap closure: Wire PostMigrationCompleted in ControllerUnpublishVolume
+- [x] 10-05-PLAN.md — Gap closure: Wire PostMigrationCompleted in ControllerUnpublishVolume
 
 **Details:**
 - Metrics with `rds_csi_migration_` prefix
