--- a/.planning/milestones/v0.6-ROADMAP.md
+++ b/.planning/milestones/v0.6-ROADMAP.md
@@ -2,7 +2,7 @@
 
 **Status:** In Progress
 **Phases:** 11-13
-**Total Plans:** TBD (to be determined during phase planning)
+**Total Plans:** 4 (3 for Phase 11, 1 for Phase 12, TBD for Phase 13)
 
 ## Overview
 
@@ -10,11 +10,12 @@ This roadmap implements CSI block volume support to enable KubeVirt VMs with RDS
 
 ## Phases
 
-### Phase 11: Block Volume Node Operations
+### Phase 11: Block Volume Node Operations (COMPLETE)
 **Goal**: Node plugin handles block volumes without formatting filesystem
 **Depends on**: Phase 10 (RWX capability exists)
 **Requirements**: BLOCK-01, BLOCK-02, BLOCK-03, BLOCK-04, BLOCK-05
-**Plans**: TBD
+**Plans**: 3 plans
+**Status**: Complete (2026-02-03)
 
 **Success Criteria** (what must be TRUE):
 1. NodeStageVolume connects to NVMe target for block volumes without creating filesystem
@@ -24,14 +25,16 @@ This roadmap implements CSI block volume support to enable KubeVirt VMs with RDS
 5. NodeUnstageVolume disconnects NVMe target for block volumes correctly
 
 Plans:
-- [ ] 11-01-PLAN.md — TBD during planning
+- [x] 11-01-PLAN.md — MakeFile helper and NodeStageVolume block support
+- [x] 11-02-PLAN.md — NodePublishVolume and NodeUnpublishVolume block support
+- [x] 11-03-PLAN.md — NodeUnstageVolume block support and unit tests
 
 **Details:**
 - Detect volumeMode from volume context or capability in NodeStageVolume
 - For block volumes: connect to NVMe target, resolve device path, store metadata (skip mkfs/mount)
 - Create staging directory for metadata storage (device path, NQN, etc.)
 - NodePublishVolume reads device path from staging metadata
-- Use mknod to create block device file at target path with major/minor from staging device
+- Use bind mount to expose block device at target path (simpler than mknod)
 - NodeUnpublishVolume removes block device file (unmount not applicable)
 - NodeUnstageVolume reads metadata, validates device not in use, disconnects NVMe
 
@@ -39,7 +42,7 @@ Plans:
 **Goal**: Existing filesystem volumes work without regression, clear error messages
 **Depends on**: Phase 11
 **Requirements**: BLOCK-06, BLOCK-07
-**Plans**: TBD
+**Plans**: 1 plan
 
 **Success Criteria** (what must be TRUE):
 1. Existing filesystem-mode PVCs mount successfully (no regression from block volume changes)
@@ -47,7 +50,7 @@ Plans:
 3. Unit tests cover both block and filesystem volume paths
 
 Plans:
-- [ ] 12-01-PLAN.md — TBD during planning
+- [ ] 12-01-PLAN.md — Comprehensive regression tests and error message validation
 
 **Details:**
 - Regression testing with existing filesystem volumes (ext4 mount)
@@ -91,7 +94,7 @@ Plans:
 
 **Key Decisions:**
 - ROADMAP-7: Block volume support for KubeVirt VMs (primary use case)
-- ROADMAP-8: mknod approach for block device file creation (standard CSI pattern)
+- ROADMAP-8: Bind mount approach for block device file exposure (simpler than mknod)
 - ROADMAP-9: Metadata storage in staging directory (enables device path resolution)
 
 **Issues Targeted:**
@@ -105,7 +108,7 @@ Plans:
 - Volume expansion for block volumes (separate milestone)
 
 **Technical Debt Incurred:**
-- TBD (will be tracked during execution)
+- None so far (clean implementation in Phase 11)
 
 ---
 
