fix(12): revise plan based on checker feedback
- Task 1: Clarified that Stage/Unstage filesystem tests exist but
  Publish/Unpublish tests do NOT exist - these still need to be added
- Task 2: Consolidated into single task that verifies existing coverage
  plus adds error message structure test
- Task 3: Removed (merged into Task 2)
- Reduced from 3 tasks to 2 tasks for cleaner execution

--- a/.planning/phases/12-compatibility-and-quality/12-01-PLAN.md
+++ b/.planning/phases/12-compatibility-and-quality/12-01-PLAN.md
@@ -21,10 +21,10 @@ must_haves:
   artifacts:
     - path: "pkg/driver/node_test.go"
       provides: "Comprehensive regression tests for block and filesystem volumes"
-      contains: "TestNodePublishVolume_FilesystemVolume_Unchanged"
+      contains: "TestNodePublishVolume_FilesystemVolume"
     - path: "pkg/driver/controller_test.go"
       provides: "Error message validation tests"
-      contains: "TestValidateVolumeCapabilities_ErrorMessages"
+      contains: "TestValidateVolumeCapabilities_ErrorMessageStructure"
   key_links:
     - from: "pkg/driver/node_test.go"
       to: "pkg/driver/node.go"
@@ -33,10 +33,10 @@ must_haves:
 ---
 
 <objective>
-Add comprehensive regression tests ensuring block volume changes don't break filesystem volumes, and verify error messages are clear and actionable.
+Add filesystem Publish/Unpublish regression tests and verify error messages are actionable.
 
 Purpose: Fulfill BLOCK-06 (no regression) and BLOCK-07 (clear error messages) requirements before hardware validation
-Output: Complete test coverage for both volume modes, validated error message quality
+Output: Complete test coverage for filesystem Publish/Unpublish operations, validated error message quality
 </objective>
 
 <execution_context>
@@ -55,155 +55,146 @@ Output: Complete test coverage for both volume modes, validated error message qu
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Add Missing Filesystem Regression Tests</name>
+  <name>Task 1: Add Filesystem Publish/Unpublish Regression Tests</name>
   <files>pkg/driver/node_test.go</files>
   <action>
-Add the missing filesystem volume regression tests to ensure Phase 11 block volume changes didn't break existing functionality.
+Add filesystem volume Publish and Unpublish regression tests. Note: Stage/Unstage filesystem tests already exist (`TestNodeStageVolume_FilesystemVolume_Unchanged` at line 756, `TestNodeUnstageVolume_FilesystemVolume_Unchanged` at line 1071). Publish/Unpublish tests for filesystem do NOT exist and need to be added.
 
-Create these new test functions following the existing patterns:
+Existing coverage:
+- TestNodeStageVolume_FilesystemVolume_Unchanged (exists)
+- TestNodeUnstageVolume_FilesystemVolume_Unchanged (exists)
+- TestNodePublishVolume_BlockVolume (exists)
+- TestNodeUnpublishVolume_BlockVolume (exists)
 
-1. **TestNodePublishVolume_FilesystemVolume_Unchanged**
-   - Create staging directory with NO device metadata file (filesystem volumes don't have it)
-   - Create request with filesystem VolumeCapability (Mount type, ext4)
-   - Execute NodePublishVolume
-   - Verify: Mount WAS called (bind mount from staging to target)
-   - Verify: Target directory was created
-   - Follow pattern from TestNodePublishVolume_BlockVolume but for filesystem mode
+Missing (add these):
+1. **TestNodePublishVolume_FilesystemVolume** - Verify filesystem bind mount still works
+2. **TestNodeUnpublishVolume_FilesystemVolume** - Verify filesystem unmount still works
 
-2. **TestNodeUnpublishVolume_FilesystemVolume_Unchanged**
-   - Create target directory (not file, unlike block volumes)
-   - Execute NodeUnpublishVolume
-   - Verify: Unmount WAS called
-   - Verify: Target directory was cleaned up
-   - Follow pattern from TestNodeUnpublishVolume_BlockVolume but for filesystem mode
-
-Use the existing helper function `createFilesystemVolumeCapability()` for capability creation.
-
-Pattern to follow (from existing tests):
+Implementation for TestNodePublishVolume_FilesystemVolume:
 ```go
-func TestNodePublishVolume_FilesystemVolume_Unchanged(t *testing.T) {
-    // Setup temp dirs
+func TestNodePublishVolume_FilesystemVolume(t *testing.T) {
     tmpDir, err := os.MkdirTemp("", "node-test-fs-publish-*")
-    // ...
+    if err != nil {
+        t.Fatalf("failed to create temp dir: %v", err)
+    }
+    defer os.RemoveAll(tmpDir)
 
-    // Setup staging WITHOUT device metadata (filesystem volumes don't have it)
-    if err := os.MkdirAll(stagingPath, 0750); err != nil { ... }
+    stagingPath := filepath.Join(tmpDir, "staging")
+    targetPath := filepath.Join(tmpDir, "target")
 
-    // Setup mocks
-    mounter := &mockMounter{}
-    // ...
-
-    // Create request with filesystem capability
-    req := &csi.NodePublishVolumeRequest{
-        VolumeCapability: createFilesystemVolumeCapability(),
-        // ...
+    // Setup staging directory (no device metadata file for filesystem volumes)
+    if err := os.MkdirAll(stagingPath, 0750); err != nil {
+        t.Fatalf("failed to create staging dir: %v", err)
     }
 
-    // Execute and verify
-    // ...
+    mounter := &mockMounter{}
+    driver := &Driver{
+        name:    "rds.csi.srvlab.io",
+        version: "test",
+        metrics: observability.NewMetrics(),
+    }
+    ns := &NodeServer{
+        driver:  driver,
+        mounter: mounter,
+        nodeID:  "test-node",
+    }
+
+    req := &csi.NodePublishVolumeRequest{
+        VolumeId:          "pvc-12345678-1234-1234-1234-123456789012",
+        StagingTargetPath: stagingPath,
+        TargetPath:        targetPath,
+        VolumeCapability:  createFilesystemVolumeCapability(),
+        Readonly:          false,
+    }
+
+    _, err = ns.NodePublishVolume(context.Background(), req)
+    if err != nil {
+        t.Fatalf("NodePublishVolume failed: %v", err)
+    }
+
+    // Verify: Mount WAS called for filesystem bind mount
+    if !mounter.mountCalled {
+        t.Error("Mount should be called for filesystem volume bind mount")
+    }
+}
+```
+
+Implementation for TestNodeUnpublishVolume_FilesystemVolume:
+```go
+func TestNodeUnpublishVolume_FilesystemVolume(t *testing.T) {
+    tmpDir, err := os.MkdirTemp("", "node-test-fs-unpublish-*")
+    if err != nil {
+        t.Fatalf("failed to create temp dir: %v", err)
+    }
+    defer os.RemoveAll(tmpDir)
+
+    targetPath := filepath.Join(tmpDir, "target")
+
+    // Create target directory (filesystem volumes use directories, not files)
+    if err := os.MkdirAll(targetPath, 0750); err != nil {
+        t.Fatalf("failed to create target dir: %v", err)
+    }
+
+    mounter := &mockMounter{}
+    driver := &Driver{
+        name:    "rds.csi.srvlab.io",
+        version: "test",
+        metrics: observability.NewMetrics(),
+    }
+    ns := &NodeServer{
+        driver:  driver,
+        mounter: mounter,
+        nodeID:  "test-node",
+    }
+
+    req := &csi.NodeUnpublishVolumeRequest{
+        VolumeId:   "pvc-12345678-1234-1234-1234-123456789012",
+        TargetPath: targetPath,
+    }
+
+    _, err = ns.NodeUnpublishVolume(context.Background(), req)
+    if err != nil {
+        t.Fatalf("NodeUnpublishVolume failed: %v", err)
+    }
+
+    // Verify: Unmount WAS called
+    if !mounter.unmountCalled {
+        t.Error("Unmount should be called for filesystem volume")
+    }
 }
 ```
   </action>
   <verify>
 Run tests:
 ```bash
-go test -v -run "TestNodePublishVolume_FilesystemVolume_Unchanged|TestNodeUnpublishVolume_FilesystemVolume_Unchanged" ./pkg/driver/...
+go test -v -run "TestNodePublishVolume_FilesystemVolume|TestNodeUnpublishVolume_FilesystemVolume" ./pkg/driver/...
 ```
 Both new tests should pass.
   </verify>
   <done>
-- TestNodePublishVolume_FilesystemVolume_Unchanged exists and passes
-- TestNodeUnpublishVolume_FilesystemVolume_Unchanged exists and passes
+- TestNodePublishVolume_FilesystemVolume exists and passes
+- TestNodeUnpublishVolume_FilesystemVolume exists and passes
 - Tests verify Mount/Unmount called for filesystem volumes
-- Tests verify filesystem volumes don't use device metadata file pattern
+- Full node operation coverage: Stage, Publish, Unpublish, Unstage for both block and filesystem modes
   </done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Add Comprehensive Table-Driven Volume Mode Tests</name>
-  <files>pkg/driver/node_test.go</files>
-  <action>
-Create a table-driven test that exercises both block and filesystem volume modes for a complete operation, validating the different code paths are correctly exercised.
-
-Add `TestNodeOperations_BothVolumeModes` that covers:
-
-```go
-func TestNodeOperations_BothVolumeModes(t *testing.T) {
-    tests := []struct {
-        name              string
-        volumeMode        string  // "block" or "filesystem"
-        expectFormat      bool    // Stage: should Format be called?
-        expectStageMount  bool    // Stage: should Mount be called?
-        expectMetadata    bool    // Stage: should device metadata file exist?
-        expectPublishMount bool   // Publish: should Mount be called?
-        expectUnmount     bool    // Unstage: should Unmount be called?
-    }{
-        {
-            name:              "filesystem volume - full lifecycle",
-            volumeMode:        "filesystem",
-            expectFormat:      true,
-            expectStageMount:  true,
-            expectMetadata:    false,
-            expectPublishMount: true,
-            expectUnmount:     true,
-        },
-        {
-            name:              "block volume - full lifecycle",
-            volumeMode:        "block",
-            expectFormat:      false,
-            expectStageMount:  false,
-            expectMetadata:    true,
-            expectPublishMount: true,  // bind mount device to file
-            expectUnmount:     false,  // no filesystem to unmount at unstage
-        },
-    }
-
-    for _, tt := range tests {
-        t.Run(tt.name, func(t *testing.T) {
-            // Setup temp dirs
-            // Setup mocks with tracking
-            // Create capability based on volumeMode
-            // Execute Stage, Publish, Unpublish, Unstage
-            // Verify expectations at each step
-        })
-    }
-}
-```
-
-This test provides:
-1. Side-by-side comparison of both modes
-2. Clear documentation of expected differences
-3. Quick regression detection if behavior changes
-4. Table structure makes it easy to add edge cases
-
-Implementation notes:
-- Reset mock tracking between operations (formatCalled, mountCalled, etc.)
-- Use t.Run for clear failure reporting
-- Check file/directory existence for metadata and targets
-- Clean up between subtests
-  </action>
-  <verify>
-Run the comprehensive test:
-```bash
-go test -v -run "TestNodeOperations_BothVolumeModes" ./pkg/driver/...
-```
-Both subtests (filesystem and block) should pass.
-  </verify>
-  <done>
-- TestNodeOperations_BothVolumeModes exists with table-driven structure
-- Both "filesystem volume - full lifecycle" and "block volume - full lifecycle" subtests pass
-- Test verifies different behavior for Format, Mount, metadata, Unmount
-- Clear documentation of expected differences between modes
-  </done>
-</task>
-
-<task type="auto">
-  <name>Task 3: Verify Error Message Quality and Full Test Suite</name>
+  <name>Task 2: Verify Existing Test Coverage and Add Error Message Test</name>
   <files>pkg/driver/controller_test.go</files>
   <action>
-Verify that error messages for invalid volume mode combinations follow the WHAT/WHY/HOW pattern, and run the full test suite to confirm no regressions.
+Verify existing tests cover both volume modes, then add error message structure test.
 
-1. **Add error message structure test** in controller_test.go:
+1. **Verify existing coverage runs correctly:**
+Run existing regression tests to confirm Phase 11 changes didn't break filesystem support:
+- TestNodeStageVolume_FilesystemVolume_Unchanged
+- TestNodeUnstageVolume_FilesystemVolume_Unchanged
+- TestNodeStageVolume_BlockVolume
+- TestNodeUnstageVolume_BlockVolume
+- TestNodePublishVolume_BlockVolume
+- TestNodeUnpublishVolume_BlockVolume
+
+2. **Add error message structure test** in controller_test.go:
 
 ```go
 func TestValidateVolumeCapabilities_ErrorMessageStructure(t *testing.T) {
@@ -228,13 +219,8 @@ func TestValidateVolumeCapabilities_ErrorMessageStructure(t *testing.T) {
     errMsg := err.Error()
 
     // WHAT: identifies the problem
-    if !strings.Contains(errMsg, "RWX") {
-        t.Error("error should mention RWX (what's wrong)")
-    }
-
-    // WHY: explains the reason
-    if !strings.Contains(errMsg, "corruption") || !strings.Contains(errMsg, "risk") {
-        t.Error("error should explain why (corruption risk)")
+    if !strings.Contains(errMsg, "RWX") && !strings.Contains(errMsg, "MULTI_NODE") {
+        t.Error("error should mention RWX or MULTI_NODE (what's wrong)")
     }
 
     // HOW: provides remediation
@@ -244,12 +230,12 @@ func TestValidateVolumeCapabilities_ErrorMessageStructure(t *testing.T) {
 }
 ```
 
-2. **Run full test suite** to verify no regressions:
+3. **Run full test suite** to verify no regressions:
 ```bash
 make test
 ```
 
-3. **Run coverage** to verify test coverage:
+4. **Run coverage** to verify test coverage:
 ```bash
 go test -cover ./pkg/driver/...
 ```
@@ -259,6 +245,9 @@ Ensure coverage is at least maintained or improved from Phase 11 baseline (~48%)
   <verify>
 Run all verification commands:
 ```bash
+# Existing filesystem tests
+go test -v -run "FilesystemVolume_Unchanged|BlockVolume" ./pkg/driver/...
+
 # Error message test
 go test -v -run "TestValidateVolumeCapabilities_ErrorMessageStructure" ./pkg/driver/...
 
@@ -271,8 +260,9 @@ go test -cover ./pkg/driver/...
 All tests pass, coverage >= 48%.
   </verify>
   <done>
+- Existing Stage/Unstage tests for both volume modes pass
 - TestValidateVolumeCapabilities_ErrorMessageStructure exists and passes
-- Error message contains WHAT (RWX), WHY (corruption risk), HOW (volumeMode: Block)
+- Error message contains WHAT (RWX/MULTI_NODE) and HOW (volumeMode: Block)
 - Full test suite passes (`make test`)
 - Test coverage maintained or improved (>= 48% in pkg/driver)
 - BLOCK-06 satisfied: No regression in filesystem volume functionality
@@ -287,7 +277,7 @@ After completing all tasks:
 
 1. **All new tests pass:**
 ```bash
-go test -v -run "FilesystemVolume_Unchanged|BothVolumeModes|ErrorMessageStructure" ./pkg/driver/...
+go test -v -run "FilesystemVolume|ErrorMessageStructure" ./pkg/driver/...
 ```
 
 2. **Full test suite passes:**
@@ -311,9 +301,8 @@ make build
 </verification>
 
 <success_criteria>
-- [ ] TestNodePublishVolume_FilesystemVolume_Unchanged passes
-- [ ] TestNodeUnpublishVolume_FilesystemVolume_Unchanged passes
-- [ ] TestNodeOperations_BothVolumeModes passes for both block and filesystem
+- [ ] TestNodePublishVolume_FilesystemVolume passes
+- [ ] TestNodeUnpublishVolume_FilesystemVolume passes
 - [ ] TestValidateVolumeCapabilities_ErrorMessageStructure passes
 - [ ] `make test` succeeds with no failures
 - [ ] Test coverage >= 48% in pkg/driver
